<resources>
    <string name="app_name">Sành điệu</string>
    <string name="processorManager">Generating game data…</string>
    <string name="dumpRelyIndex">Word search game is a puzzle game, where the player try to find words in a grid of letters in horizontal, vertical and diagonal direction.</string>
    <string name="moduleNetworkBroker">Finished!</string>
    <string name="referrerAlarm">Congratulations on the successful challenge. \nReturn to the main menu to continue with the new game?</string>

    <!-- prefs -->
    <string name="wordsClipboardEdit">showGridLine</string>
    <string name="installEntry">snapToGrid</string>
    <string name="handlerLibjcore">enableSound</string>
    <string name="moditySession">deleteAfterFinish</string>
    <string name="listBroker">enableFullscreen</string>
    <string name="directionLite">autoScaleGrid</string>
    <string name="clipboardHomeClear">ALWAYS_SNAP</string>
    <string name="connectivityNetwork">Show Grid Line</string>
    <string name="mainWindow_taClass_4z">Snap To Grid</string>
    <string name="userMenuStrings">About</string>
    <string name="brokerNotificationLogo">Saved game data</string>
    <string name="advertisingManifest">Enable Sound</string>
    <string name="interface_gLiteSecurity">Developer: Abdul Aris R.</string>
    <string name="contractSlide">Delete Finish</string>
    <string name="billingCenter">Fullscreen</string>
    <string name="compatCompatPath">Auto Scale Grid</string>
    <string name="afterClass_u0">You have just finished :gridSize grid with :uwCount words in :duration</string>
    <string name="powerSearchFile">Version</string>
    <string name="centerItemRound">1.0</string>
    <string name="downloadBuildGradlew">Settings</string>
    <string name="encryptionNameEncryption">Congratulations!</string>
    <string name="contractInterface_4">Main Menu</string>
    <string name="answerMedia">NEW GAME</string>
    <string name="contentGradle">Automatically scale grid based on the screen width</string>
    <string name="arrayHelperHandler">reverseMatching</string>
    <string name="contractSettings">Reverse matching</string>
    <string name="roundsReverse">grayscale</string>
    <string name="mountLogin">Grayscale</string>

</resources>
